# log-agent

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
crates/agent/: Cargo.toml
crates/agent/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  event.rs  lib.rs
crates/input/: Cargo.toml
crates/input/src/: files.rs
crates/output/: Cargo.toml
crates/output/src/: console.rs  lib.rs  net.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: channel.rs
